# OpsMateCore

./: README.md  pyproject.toml  requirements.txt
opsmate/: cli.py
opsmate/test/: test_file.json
opsmate/utils/: project_setup.py
